--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -12,3 +12,5 @@ spring.jpa.show-sql=false
 spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.hibernate.SQL=error
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
+
+file.upload-dir=C:/Users/.../HospitalEMR/uploads
