--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -13,4 +13,4 @@ spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
 logging.level.org.hibernate.SQL=error
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
 
-file.upload-dir=C:/Users/.../HospitalEMR/uploads
+file.upload-dir=C:/Users/watmx/IdeaProjects/HospitalEMR/uploads
