--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -14,3 +14,12 @@ logging.level.org.hibernate.SQL=error
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=error
 
 file.upload-dir=C:/Users/watmx/IdeaProjects/HospitalEMR/uploads
+
+spring.mail.host=smtp.gmail.com
+spring.mail.port=587
+spring.mail.username=fsirtru@gmail.com
+spring.mail.password=giyqlsjotrewsxnd
+spring.mail.properties.mail.smtp.auth=true
+spring.mail.properties.mail.smtp.starttls.enable=true
+spring.mail.properties.mail.smtp.ssl.trust=smtp.gmail.com
+spring.mail.default-encoding=UTF-8
